# health-engine

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  config.example.yaml  deploy-coach.sh  docker-compose.yml  gunicorn.conf.py  pyproject.toml  record.sh  setup.sh
config/: admin_digest.yaml  family_summaries.yaml
content/: README.md  linkedin-01-open-source-v3.md  linkedin-01-open-source-v5-final.md  linkedin-01-open-source.md  video-script.md
dashboard/: body-comp.html  index.html  light.html  member-v2.html  member.html
docs/: ARCHITECTURE.md  DATA_FORMATS.md  DATA_POLICY.md  METRICS.md  ONBOARDING.md  PRIMER.md  SCORING.md  TEST_PLAN.md  WEARABLE_DATA_TIERS.md  build-shortcut-manually.md  sleep-stack.md
engine/: db_read.py  models.py
examples/: garmin_daily.py  quickstart.py
mcp_server/: tools.py
scripts/: admin_digest.py  analyze_ingest_log.py  approve_and_welcome.sh  auto-remediate.sh  backfill_conversations.py  backfill_sleep_times.py  com.kiso.scheduler.plist  context_aggregator.py  create_user_context.py  deploy-api.sh  diagnose_garmin_auth.py  digest.py  fix_grigoriy_weight.py  healthcheck_gateway.sh  new_user_check.py  onboard_telegram.sh  refresh-dashboard.sh  restart-api.sh  run_v1_api.py  seed_users.py  send_family_summary.py  sync_users_yaml.py  system-health-check.sh  transcripts.py  update_trends.py
simulate/: simulate.py
tests/: test_analyze_ingest_log.py  test_apple_health_ingest.py  test_clinical.py  test_coaching_outcome.py  test_deploy_api_dry_run_guard.py  test_e2e_happy_paths.py  (+35 more)
(+76 files in other folders)
